fixed the horizontal scroll bar

--- a/less/index.less
+++ b/less/index.less
@@ -67,7 +67,7 @@ body {
 }
 
 .container {
-	width: 800px;
+	max-width: 800px;
 	margin: 0 auto;
 	background: @content-color;
 	@media (max-width: 500px){
